// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders NoVisMessage when no visualization 1`] = `
<div>
  <div
    class="message"
  >
    No data to display
  </div>
</div>
`;

exports[`renders a DefaultPlugin when activeType is EVENT_CHART 1`] = `
<div>
  <div
    class="default-plugin"
  />
</div>
`;

exports[`renders a DefaultPlugin when activeType is EVENT_REPORT 1`] = `
<div>
  <div
    class="default-plugin"
  />
</div>
`;

exports[`renders a MapPlugin when activeType is MAP 1`] = `
<div>
  <div
    class="map-plugin"
  />
</div>
`;

exports[`renders a VisualizationPlugin for CHART 1`] = `
<div>
  <div
    class="visualization-plugin"
  />
</div>
`;

exports[`renders a VisualizationPlugin for REPORT_TABLE 1`] = `
<div>
  <div
    class="visualization-plugin"
  />
</div>
`;

exports[`renders active type MAP rather than original type REPORT_TABLE 1`] = `
<div>
  <div
    class="map-plugin"
  />
</div>
`;

exports[`renders active type REPORT_TABLE rather than original type MAP 1`] = `
<div>
  <div
    class="visualization-plugin"
  />
</div>
`;
